# Resolve-AI

./: .env.example  .git-reflog.txt  .gitignore  DEPLOYMENT.md  README.md  README_ANALYTICS.md  architecture.md  debug_messages.py  index.html  metadata.json  package-lock.json  package.json  setup.ps1  setup.sh  vite.config.ts  walkthrough.md  widget_pro_test.html  widget_test.html
backend/: .env .example  .env.example  Dockerfile  Dockerfile.node  README.md  add_campaign_type.py  add_column.py  alembic.ini  api_logs.txt  api_logs2.txt  api_logs3.txt  bot_test.py  check_db.py  check_db2.py  docker-compose.yml  docker_logs.txt  err_output.txt  fix_db_migration.py  get_tokens.py  get_tokens_sync.py  list_models.py  list_models_filtered.py  list_models_short.py  nginx.conf  probe_models.py  probe_models_save.py  probe_results.txt  pyproject.toml  pytest_error.txt  pytest_output.txt  recent_logs.txt  startup_err.txt  test_toggle.py  test_update.py  verify_m1_b.py  wait-for-db.sh  worker_logs.txt  worker_logs2.txt  worker_logs3.txt  worker_logs_final_check.txt  (+2 more)
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_users.py  002_workspaces.py  022076b3b872_add_fts_to_knowledge_chunks.py  0b0fc81866b9_modernize_automation_module_v4.py  142f3f4ccd19_add_pending_ticket_data_to_conversation.py  18a1100c1f62_add_usage_toggles_to_knowledge.py  1b6a3699ce6b_add_conversations_and_messages_tables.py  1f05e1b02172_add_channels_table.py  29a23b4c5d6e_add_doc_metadata_to_knowledge_documents.py  2f9d604a2a29_add_is_read_to_messages.py  32a4149b5d67_merge_heads_post_metadata.py  3742673d7980_add_escalation_rules_table.py  41494a453c9f_add_created_by_and_category_to_campaigns.py  50f1feb5f5b5_add_channel_data_to_contacts_table.py  5e6f7a8b9c0d_add_assignment_status_to_tickets.py  69f781cfc707_add_type_to_campaigns.py  6b9a2aa96809_add_is_active_to_api_keys.py  6c595579224f_increase_business_hours_time_column_.py  700d4f1fc4e6_add_team_permissions_and_invite_fields.py  7a6a6f1ad83a_add_ai_agent_name.py  841f565131b5_add_automation_and_workflow_tables.py  91ed6fe5904b_create_ticket_tables.py  94b98523315a_add_missing_tables.py  9a8ce3ce2fdf_add_assigned_user_id_to_ticket.py  a0b1c2d3e4f5_merge_heads.py  a116e0d86aae_add_ai_agent_system_fields.py  a1b2c3d4e5f6_add_allowed_pages.py  add_dedup_index_001.py  b2c3d4e5f6a7_add_config_to_campaigns.py  b6db217e8048_create_knowledge_tables.py  c7d1e8a9b2c3_add_pgvector_and_new_knowledge_tables.py  d1ee1b628c94_add_ratings_and_session_fields.py  d232454661fe_add_routing_and_offline_state_to_.py  (+12 more)
backend/app/: __init__.py  add_campaign_type.py  check_campaigns.py  check_db.py  main.py  worker.py
backend/scripts/: apply_dedup_index.py  discord_forwarder.py
backend/tests/: conftest.py  test_auth.py  test_channels.py  test_facebook.py  test_health.py  test_instagram.py  test_whatsapp.py  test_workspaces.py
backend/uploads/: 17814026-318d-4848-8d1b-378f4499b986.webm  551cfcbc-cd03-4eae-a0f1-92a7f7f23dc2.webm  67d702d7-f57d-4c17-8779-2126982f096c.webm  7e7b1756-f695-487f-949b-8d65511c87d4.webm  a0d596a5-0fee-4844-a785-4d1a894c2dad.webm  c688dec0-86a5-4355-b4e3-1a2334a5181b.webm  eaf3543e-e9c4-49cf-a413-b0c7c18f9abd.webm  ffd06f43-5107-4425-b45a-265351f744ef.webm
(+238 files in other folders)
